Updated styles the to fix that are broken on last update

--- a/styles.css
+++ b/styles.css
@@ -86,12 +86,21 @@ body{
     align-content: center;
     justify-content: space-around;
     height: 50px;
+    flex-direction: column;
 }
 
 /*TODO CSS animation*/
 #navExpanded {
     display: none;
     flex-direction: column;
+}
+
+#navTop{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    align-content: center;
 }
 
 #storeMenu{
